[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://UI/Textures/Dialog.png" type="Texture" id=2]

[node name="HUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 19.9718
margin_top = 12.9351
margin_right = 111.974
margin_bottom = 32.9351
text = "Reset"

[node name="Message" type="Label" parent="."]
margin_left = 447.239
margin_top = 18.2428
margin_right = 705.239
margin_bottom = 49.2428

[node name="JumpLabel" type="Label" parent="."]
margin_left = 139.199
margin_top = 16.1696
margin_right = 182.199
margin_bottom = 30.1696
text = "Burns:"

[node name="JumpCount" type="Label" parent="JumpLabel"]
margin_left = 55.5392
margin_top = -0.703026
margin_right = 95.5392
margin_bottom = 13.297

[node name="RescueLabel" type="Label" parent="."]
margin_left = 226.569
margin_top = 16.2787
margin_right = 283.569
margin_bottom = 30.2787
text = "Rescues:"

[node name="RescueCount" type="Label" parent="RescueLabel"]
margin_left = 62.5695
margin_top = -0.703026
margin_right = 102.569
margin_bottom = 13.297

[node name="GameOver" type="TextureRect" parent="."]
visible = false
margin_left = 230.303
margin_top = 432.981
margin_right = 780.303
margin_bottom = 717.981
texture = ExtResource( 2 )

[node name="Retry" type="Button" parent="GameOver"]
margin_left = 437.986
margin_top = 110.375
margin_right = 516.986
margin_bottom = 130.375
text = "Retry"

[node name="FailMessage" type="Label" parent="GameOver"]
margin_left = 111.078
margin_top = 34.4483
margin_right = 211.078
margin_bottom = 82.4483
text = "Oh no, We lost 104!"

[node name="Success" type="TextureRect" parent="."]
visible = false
margin_left = 231.006
margin_top = 436.496
margin_right = 781.006
margin_bottom = 721.496
texture = ExtResource( 2 )

[node name="NextLevel" type="Button" parent="Success"]
margin_left = 443.611
margin_top = 105.454
margin_right = 522.611
margin_bottom = 125.454
text = "Next"

[node name="SuccessMessage" type="Label" parent="Success"]
margin_left = 116.703
margin_top = 33.7454
margin_right = 216.703
margin_bottom = 47.7454
text = "Well done, 104!"

[node name="RescueMessage" type="Label" parent="Success"]
visible = false
margin_left = 115.999
margin_top = 71.0057
margin_right = 325.999
margin_bottom = 85.0057

[node name="LevelDialogue" type="TextureRect" parent="."]
visible = false
margin_left = 231.006
margin_top = 436.496
margin_right = 781.006
margin_bottom = 721.496
texture = ExtResource( 2 )

[node name="NextLine" type="Button" parent="LevelDialogue"]
margin_left = 443.611
margin_top = 105.454
margin_right = 522.611
margin_bottom = 125.454
text = "Next"

[node name="Message" type="Label" parent="LevelDialogue"]
margin_left = 117.0
margin_top = 30.0
margin_right = 521.0
margin_bottom = 92.0
autowrap = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GameOver/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Success/NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="LevelDialogue/NextLine" to="." method="_on_NextLine_pressed"]
